Fixes for footer white gap on large screen and scrollbar on topnav on small screen

--- a/src/system/assets/less/_layout.less
+++ b/src/system/assets/less/_layout.less
@@ -53,9 +53,7 @@ body {
 		float: right !important;
 		margin: 8px;
 	}
-	
-	
-	.page-row {
+	header.page-row {
 	  display: block;
 	  height: auto;
 	}
